# Local_Read_MCP

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CUSTOM_INSTRUCTIONS_CN.md  CUSTOM_INSTRUCTIONS_EN.md  FINAL_COMPLETION.md  LICENSE  Makefile  PHASE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  example_usage.py  mineru.json.template  pyproject.toml  ruff.toml  test_mcp_local.py
docs/superpowers/specs/: 2026-03-18-pdf-enhancement-design.md
examples/: README.md
scripts/: benchmark.py  benchmark_server_hotpaths.py
src/local_read_mcp/: __init__.py  cache.py  cli.py  config.py  converters.py  index_generator.py  intermediate_json.py  markdown_converter.py  output_manager.py  server.py  vision_server.py
src/local_read_mcp/backends/: __init__.py  base.py  mineru.py  model_detector.py  simple.py  vlm.py
src/local_read_mcp/converters/: __init__.py  base.py  docx.py  html.py  pdf.py  pdf_forms.py  pdf_inspector.py  pdf_rendering.py  pdf_tables.py  pptx.py  simple.py  utils.py  xlsx.py  zip.py
src/local_read_mcp/mineru/: __init__.py  pdf_classify.py
src/local_read_mcp/segmenter/: __init__.py  chunk_planner.py  toc_extractor.py
src/local_read_mcp/server/: __init__.py  __main__.py  app.py  utils.py  vision.py
src/test/: __init__.py  test_backends_registry.py  test_cli.py  test_converters.py  test_index_generator.py  test_intermediate_json.py  test_markdown_converter.py  test_output_manager.py  test_segmenter.py  test_server.py
