[project]
name = "local_read_mcp"
version = "0.1.0"
description = "A Model Context Protocol server for document processing without external API dependencies"
readme = "README.md"
authors = [
    { name = "ansatz Vibe", email = "ansatzMe@ouutlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "mammoth>=1.9.0",
    "markdownify>=0.14.1",
    "openpyxl>=3.1.5",
    "pdfminer-six",
    "python-pptx",
    "markitdown>=0.1.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "8.3.5"
testpaths = ["src/test"]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-rA",
    "--show-capture=stderr",
]
